docs(69-04): flip 68-VALIDATION.md to n/a (pom.xml + JEP 498 build-only diff; D-12)